--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,13 @@
 name: Build with Gradle
 
 on:
-  - [ push ]
-  - pull_requests:
-      branch: [ main ]
+  push:
+    branches:
+      - main
+      - *
+  pull_requests:
+    branch:
+      - main
 
 jobs:
   build:
